--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -5,17 +5,11 @@
 
     <div class='panel-body'>
         <!-- Filter by the Title   -->
-        <div class='row'>
-            <div class='col-md-2'>Filter by:</div>
-            <div class='col-md-4'>
-                <input type='text'
-                       [(ngModel)]='listFilter' />
-            </div>
-        </div>
-        <div class='row' [hidden]='!listFilter'>
-            <div class='col-md-10'>
-                <h3>Filtered by: {{listFilter}} </h3>
-            </div>
+        <div class="row">
+          <pm-criteria [displayDetails]="displayData" #filterCriteria
+                      [hitCount]="filteredProducts?.length"
+          class="col-md-10">   </pm-criteria>
+  {{filterCriteria.listFilter}}
         </div>
 
         <div class='table-responsive'>
@@ -58,7 +52,7 @@
 							</pm-star>
                         </td>
                         <td>
-                            <a class="btn btn-primary" 
+                            <a class="btn btn-primary"
                                 [routerLink]="['/products', product.id, 'edit']">
                                 Edit
                             </a>
