--- a/src/app/products/product-shell/product-shell-list.component.html
+++ b/src/app/products/product-shell/product-shell-list.component.html
@@ -5,10 +5,11 @@
 
   <div class='panel-body'>
     <div class='list-group'>
-      <button type='button'
+      <button type='button' (click)='onSelected(product)'
               class='list-group-item'
               *ngFor='let product of products'>
         {{ product.productName }} ({{ product.productCode }})
+
       </button>
     </div>
   </div>
